--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-:root {
-  --columns: 5;
-}
-
 * {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif !important;
   margin: 0;
@@ -19,11 +15,15 @@
 }
 
 .posts {
+  --columns: 5;
   display: flex;
   flex-wrap: wrap;
   align-items: self-start;
   gap: 10px;
   margin-top: 5rem;
+  max-width: 1400px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .post-item {
