--- a/src/index.css
+++ b/src/index.css
@@ -32,11 +32,7 @@
 }
 
 .tags-input-container {
-  border: 2px solid #000;
-  padding: 0.5em;
-  border-radius: 3px;
-  width: min(80vw, 600px);
-  margin-top: 1em;
+  width: 100%;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
