feat: form validation

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,31 @@
   border-radius: 8px;
 }
 
+.opacity-gradient {
+  -webkit-mask-image: -webkit-gradient(
+    linear,
+    left 90%,
+    left bottom,
+    from(rgba(0, 0, 0, 1)),
+    to(rgba(0, 0, 0, 0))
+  );
+  -moz-mask-image: -moz-gradient(
+    linear,
+    left 90%,
+    left bottom,
+    from(rgba(0, 0, 0, 1)),
+    to(rgba(0, 0, 0, 0))
+  );
+  mask-image: gradient(
+    linear,
+    left 90%,
+    left bottom,
+    from(rgba(0, 0, 0, 0.671)),
+    to(rgba(0, 0, 0, 0)),
+    
+  );
+}
+
 .loaded {
   filter: none !important;
   transform: scale(1) !important;
